[package]

name = "snowid"
version = "2.0.3"

edition = "2024"
rust-version = "1.95.0"

authors = ["Maksim Sasnouski <maksim@rixl.com>"]
description = "A Rust library for generating SnowID - a Snowflake-like timestamp-based distributed unique identifier"

license = "MIT"
readme = "README.md"
keywords = ["snowflake", "id", "uuid", "tsid", "twitter"]
categories = ["algorithms", "data-structures"]

documentation = "https://docs.rs/snowid"
homepage = "https://github.com/qeeqez/snowid-rust"
repository = "https://github.com/qeeqez/snowid-rust"


[lints.rust]
unused_qualifications = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
redundant_semicolons = "deny"
unused_allocation = "deny"
impl_trait_redundant_captures = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
wildcard_imports = "deny"
redundant_closure_for_method_calls = "warn"
cloned_instead_of_copied = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
checked_conversions = "warn"
case_sensitive_file_extension_comparisons = "warn"
redundant_type_annotations = "warn"
manual_let_else = "warn"
needless_continue = "warn"
option_as_ref_cloned = "warn"
str_to_string = "warn"
trivially_copy_pass_by_ref = "warn"
pattern_type_mismatch = "warn"
cognitive_complexity = "warn"
too_many_lines = "warn"
type_repetition_in_bounds = "warn"
verbose_bit_mask = "warn"
branches_sharing_code = "warn"
redundant_clone = "warn"
redundant_closure = "warn"
single_match_else = "warn"
needless_collect = "warn"
ref_option_ref = "warn"
unused_unit = "warn"
unused_self = "warn"
redundant_pub_crate = "warn"
undocumented_unsafe_blocks = "warn"
transmute_undefined_repr = "warn"
mem_forget = "warn"
struct_excessive_bools = "warn"
separated_literal_suffix = "warn"
or_fun_call = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
unneeded_field_pattern = "warn"
verbose_file_reads = "warn"
string_lit_as_bytes = "warn"
zero_sized_map_values = "warn"
wrong_transmute = "warn"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[dependencies]
base62 = "2.2.4"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
rand = "0.10.1"
chrono = "0.4.44"

[[bench]]
name = "snowid_benchmarks"
harness = false

[[bench]]
name = "base62_benchmarks"
harness = false

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "custom_config"
path = "examples/custom_config.rs"

[[example]]
name = "distributed"
path = "examples/distributed.rs"
