[package]

name = "snowid"
version = "2.1.0"

edition = "2024"
rust-version = "1.95.0"

authors = ["Maksim Sosnovskii <maksim@rixl.com>"]
description = "A Rust library for generating SnowID - a Snowflake-like timestamp-based distributed unique identifier"

license = "MIT"
readme = "README.md"
keywords = ["snowflake", "id", "uuid", "tsid", "twitter"]
categories = ["algorithms", "data-structures"]

documentation = "https://docs.rs/snowid"
homepage = "https://github.com/qeeqez/snowid-rust"
repository = "https://github.com/qeeqez/snowid-rust"


[lints.rust]
unused_qualifications = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
redundant_semicolons = "deny"
unused_allocation = "deny"
impl_trait_redundant_captures = "deny"

[lints.clippy]
# Safety / critical
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
wildcard_imports = "deny"
# Complexity (thresholds in clippy.toml)
cognitive_complexity = "warn"
too_many_lines = "warn"
# Cast safety
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
checked_conversions = "warn"
# Code quality
redundant_closure_for_method_calls = "warn"
cloned_instead_of_copied = "warn"
redundant_clone = "warn"
redundant_closure = "warn"
needless_collect = "warn"
needless_continue = "warn"
unused_self = "warn"
undocumented_unsafe_blocks = "warn"
mem_forget = "warn"
wrong_transmute = "warn"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[dependencies]
base62 = "2.2.4"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
rand = "0.10.1"
chrono = "0.4.44"

[[bench]]
name = "snowid_benchmarks"
harness = false

[[bench]]
name = "base62_benchmarks"
harness = false

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "custom_config"
path = "examples/custom_config.rs"

[[example]]
name = "distributed"
path = "examples/distributed.rs"
